tests/parsing/errors/typexpr/arrow.js
// notice usage of -> instead of =>
external add_nat: nat -> int = "add_nat_bytecode" "add_nat_native"
